--- a/views/layout.njk
+++ b/views/layout.njk
@@ -15,7 +15,7 @@
     <body>
         <header>
             <div class="links">
-                <a href="/" class="active">Instructors</a>
+                <a href="/" class="active">Instructor</a>
                 <a href="/portfolio">Members</a>
             </div>            
         </header>
