--- a/public/styles.css
+++ b/public/styles.css
@@ -164,7 +164,8 @@ input::placeholder {
     font-weight: normal;
 }
 
-button[type="submit"] {
+button[type="submit"],
+a.button {
     padding: 8px 32px;
     background-color: var(--primary-color);
     border-radius: 4px;
@@ -172,6 +173,12 @@ button[type="submit"] {
     width: 100%;
     color: #FFF;
     font-size: 16px;
+}
+
+a.button {
+    display: block;
+    text-align: center;
+    text-decoration: none;
 }
 
 form.card .item:nth-child(6){
