--- a/views/instructors/edit.njk
+++ b/views/instructors/edit.njk
@@ -2,15 +2,27 @@
 
 {% block content %}
 
-    <form class="card" method="POST" action="/instructors">
+    <div class="card">
         <section class="avatar"></section>
 
         <section class="details">
-            <h3>Editar Instrutor</h3>
+            <form method="POST" action="/instructors?_method=PUT">            
+                <h3>Editar Instrutor</h3>
 
-            {% include 'instructors/filds.njk' %}
+                {% include 'instructors/filds.njk' %}
 
+                <input 
+                    type="hidden" 
+                    name="id" 
+                    value={{ instructor.id }}
+                >
+            </form>
+
+            <form id="form-delete" action="/instructors?_method=DELETE" method="POST">
+                <input type="hidden" name="id" value="{{ instructor.id }}">
+                <button type="submit">Deletar</button>
+            </form>
         </section>
-    </form>
+    </div>
     
 {% endblock content %}
