--- a/public/styles.css
+++ b/public/styles.css
@@ -197,3 +197,76 @@ form.card .item:nth-child(6){
     background-color: lightcoral;
     cursor: pointer;
 }
+
+/* === INDEX INSTRUCTORS === */
+.table-container {
+    display: block;
+    padding: 40px;
+}
+
+.table-container table {
+    width: 100%;
+    border-spacing: 0;
+}
+
+.table-container table thead tr th{
+    text-align: left;
+}
+
+td, th {
+    padding: 16px;
+    border-bottom: 1px solid #D9D9D9;
+}
+
+th {
+    text-transform: uppercase;
+    color: #777;
+    font-size: 14px;
+}
+
+tbody tr:last-child td {
+    border-bottom: none;
+}
+
+tbody tr td:first-child {
+    display: grid;
+    grid-template-columns: 64px 1fr;
+    align-items: center;
+}
+
+tbody tr td:first-child span {
+    width: 48px;
+    height: 48px;
+    background-position: center;
+    background-size: cover;
+    border-radius: 50%;
+    box-shadow: 3px 1px 6px -3px #000;
+    border: 2px solid #FFF;
+}
+
+tbody tr td:last-child a {
+    background-color: var(--primary-color);
+    padding: 8px 16px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #FFF;
+    font-size: 12px;
+    border-radius: 6px;
+}
+
+.table-container thead tr th:last-child, 
+td:last-child {
+    text-align: center;
+}
+
+
+.table-container table tbody tr td:first-child + td span {
+    padding: 8px 16px;
+    background-color: var(--secondary-color);
+    border-radius: 16px;
+    color: #777;
+    margin-right: 4px;
+    font-weight: bold;
+    text-transform: uppercase;
+    font-size: 12px;
+}
