--- a/views/layout.njk
+++ b/views/layout.njk
@@ -15,7 +15,7 @@
         <header>
             <div class="links">
                 <a href="/" class="active">Instructor</a>
-                <a href="/portfolio">Members</a>
+                <a href="/members">Members</a>
             </div>            
         </header>
 
