--- a/public/styles.css
+++ b/public/styles.css
@@ -143,7 +143,7 @@ header {
 /*=== CREATE ===*/
 
 /* form */
-input {
+input, select {
     width: 100%;
     outline: none;
     color: #555;
@@ -159,6 +159,10 @@ input[type="radio"] {
 input::placeholder {
     font-size: 12px;
     font-weight: normal;
+}
+
+select option {
+    margin: 5px
 }
 
 button[type="submit"],
@@ -240,11 +244,12 @@ tbody tr td:first-child span {
     background-position: center;
     background-size: cover;
     border-radius: 50%;
-    box-shadow: 3px 1px 6px -3px #000;
+    box-shadow: 3px 1px 6px -4px #000;
     border: 2px solid #FFF;
 }
 
-tbody tr td:last-child a {
+tbody tr td:last-child a,
+.table-container > a {
     background-color: var(--primary-color);
     padding: 8px 16px;
     text-decoration: none;
@@ -252,6 +257,11 @@ tbody tr td:last-child a {
     color: #FFF;
     font-size: 12px;
     border-radius: 6px;
+}
+
+.table-container > a {
+    margin-bottom: 16px;
+    display: inline-block;
 }
 
 .table-container thead tr th:last-child, 
