--- a/views/members/create.njk
+++ b/views/members/create.njk
@@ -2,13 +2,13 @@
 
 {% block content %}
 
-    <form class="card" method="POST" action="/instructors">
+    <form class="card" method="POST" action="/members">
         <section class="avatar"></section>
 
         <section class="details">
-            <h3>Novo Instrutor</h3>
+            <h3>Novo Membro</h3>
 
-            {% include 'instructors/filds.njk' %}
+            {% include 'members/filds.njk' %}
 
         </section>
     </form>
