--- a/views/members/filds.njk
+++ b/views/members/filds.njk
@@ -5,19 +5,31 @@
             type="url"
             name="avatar_url"
             placeholder="http://"
-            value="{{ instructor.avatar_url }}"
+            value="{{ member.avatar_url }}"
         >
     </div>
 </div>
 
 <div class="item">
-    <div>Instrutor</div>
+    <div>Nome</div>
     <div>
         <input 
             type="text"
             name="name"
-            placeholder="Nome do Instrutor"
-            value="{{ instructor.name }}"
+            placeholder="Nome do Membro"
+            value="{{ member.name }}"
+        >
+    </div>
+</div>
+
+<div class="item">
+    <div>E-mail</div>
+    <div>
+        <input 
+            type="email"
+            name="email"
+            placeholder="exemplo@email.com "
+            value="{{ member.email }}"
         >
     </div>
 </div>
@@ -28,7 +40,7 @@
         <input 
             type="date"
             name="birth"
-            value="{{ instructor.birth }}"
+            value="{{ member.birth }}"
         >
     </div>
 </div>
@@ -41,7 +53,7 @@
                 type="radio" 
                 name="gender" 
                 value="M" 
-                {% if instructor.gender == "M" %} checked {% endif %}
+                {% if member.gender == "M" %} checked {% endif %}
             >
             Marculino
         </span>
@@ -50,7 +62,7 @@
                 type="radio" 
                 name="gender" 
                 value="F"
-                {% if instructor.gender == "F" %} checked {% endif %}
+                {% if member.gender == "F" %} checked {% endif %}
             >
             Feminino
         </span>
@@ -59,13 +71,57 @@
 
 
 <div class="item">
-    <div>Área de Atuação</div>
+    <div>Tipo Sanguíneo</div>
+    <div>
+        <select name="blood">
+            <option value="A+"{% if member.blood == "A+" %} selected {% endif %}>
+                A+
+            </option>
+            <option value="A-"{% if member.blood == "A-" %} selected {% endif %}>
+                A-
+            </option>
+            <option value="B+"{% if member.blood == "B+" %} selected {% endif %}>
+                B+
+            </option>
+            <option value="B-"{% if member.blood == "B-" %} selected {% endif %}>
+                B-
+            </option>
+            <option value="AB+"{% if member.blood == "AB+" %} selected {% endif %}>
+                AB
+            +</option>
+            <option value="AB-"{% if member.blood == "AB-" %} selected {% endif %}>
+                AB
+            -</option>
+            <option value="O+"{% if member.blood == "O+" %} selected {% endif %}>
+                O+
+            </option>
+            <option value="O-"{% if member.blood == "O-" %} selected {% endif %}>
+                O-
+            </option>            
+        </select>
+    </div>
+</div>
+
+<div class="item">
+    <div>Pego (Kg)</div>
     <div>
         <input 
-            type="text"
-            name="services"
-            placeholder="Separe os serviços prestados por vírgula"
-            value="{{ instructor.services }}"
+            type="number"
+            name="weight"
+            placeholder="Kg"
+            value="{{ member.weight }}"
+        >
+    </div>
+</div>
+
+<div class="item">
+    <div>Altura (cm)</div>
+    <div>
+        <input 
+            type="number"
+            name="height"
+            placeholder="cm"
+            value="{{ member.height }}"
         >
     </div>
 </div>
